DTSPB-4070: Bring over spike code